--- a/Project.toml
+++ b/Project.toml
@@ -3,7 +3,23 @@ uuid = "74a52c65-cf97-4869-821a-69cf0eb3810b"
 authors = ["Abdelazim Hussien"]
 version = "1.0.0-DEV"
 
+[deps]
+Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
+Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+
 [compat]
+Dates = "1.11.0"
+Distributions = "0.25.116"
+LinearAlgebra = "1.11.0"
+Printf = "1.11.0"
+Random = "1.11.0"
+SpecialFunctions = "2.5.0"
+Statistics = "1.11.1"
 julia = "1.11"
 
 [extras]
