--- a/Project.toml
+++ b/Project.toml
@@ -13,6 +13,7 @@ Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [compat]
 Dates = "1"
@@ -24,6 +25,7 @@ Printf = "1"
 Random = "1"
 SpecialFunctions = "2.5.0"
 Statistics = "1"
+Test = "1.11.0"
 julia = "1"
 
 [extras]
