--- a/Project.toml
+++ b/Project.toml
@@ -30,7 +30,7 @@ Random = "1"
 SpecialFunctions = "2.5.0"
 Statistics = "1"
 StatsPlots = "0.15.7"
-Test = "1.11.0"
+Test = "1.10, 1.11"
 XLSX = "0.10.4"
 julia = "1"
 
