--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -1,6 +1,8 @@
 [deps]
 DocstringTranslation = "d404e13b-1f8e-41a5-a26a-0b758a0c6c97"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
-MetaheuristicsAlgorithms = "74a52c65-cf97-4869-821a-69cf0eb3810b"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+
+[compat]
+Documenter = "1"
