--- a/.JuliaFormatter.toml
+++ b/.JuliaFormatter.toml
@@ -4,3 +4,9 @@ remove_extra_newlines = true
 trailing_zero = false
 join_lines_based_on_source = true
 whitespace_in_kwargs = false
+annotate_untyped_fields_with_any = false
+align_assignment   = true
+align_struct_field = true
+align_conditional  = true
+align_pair_arrow   = true
+align_matrix       = true
